removed test folder

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script language="javascript">
-        window.location.href="/zonenone/loadlogin.do";
+        window.location.href=${pageContext.request.contextPath}"/loadlogin.do";
 </script>
 </body>
 </html>
