--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -32,11 +32,11 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/l1ogo.png" alt="Zone None - Analyse your plan"></a>
+				<a class="navbar-brand" href="index.jsp">Customer Plan Predictive System</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.jsp">Home</a></li>
 					<li class="active"><a href="about.html">About</a></li>
 					<li><a href="plans.html">Plans</a></li>
 					
