--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -38,9 +38,9 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.jsp">Home</a></li>
 					<li class="active"><a href="about.html">About</a></li>
-					<li><a href="plans.html">Plans</a></li>
+					<li><a href="Plans.html">Plans</a></li>
 					
-					<li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>
+					<li><a class="btn" href="loadlogin.do">SIGN IN / SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -117,7 +117,7 @@
 							<p class="simplenav">
 								<a href="#">Home</a> | 
 								<a href="about.html">About</a> |
-								<a href="plans.html">Plans</a> |
+								<a href="Plans.html">Plans</a> |
 								
 								<b><a href="signup.html">Sign up</a></b>
 							</p>
